# foreman_discovery

./: .eslintrc  .gitignore  .packit.yaml  .rubocop.yml  .rubocop_todo.yml  AUTHORS  Gemfile  README.api.md  README.build_iso.md  README.md  README.ovirt_image.md  README.tcl_image.md  Rakefile  babel.config.js  foreman_discovery.gemspec  package.json  release-gem  update-i18n
.github/workflows/: js_tests.yml  ruby.yml  ruby_ci.yml  ruby_tests.yml
.tx/: config
app/controllers/: discovered_controller.rb  discovered_hosts_controller.rb  discovers_controller.rb  discovery_rules_controller.rb  hosts_controller_extensions.rb
app/helpers/: discovered_helper.rb  discovered_hosts_helper.rb  discovers_helper.rb  discovery_rules_helper.rb  host_discovered_helper.rb
app/lib/: facter_utils.rb  puppet_fact_parser_extensions.rb
app/mailers/: discovered_mailer.rb
app/models/: discovery_attribute_set.rb  discovery_fact_name.rb  discovery_rule.rb  fact_name.rb  host_discovered_helpers.rb  hostgroup_extensions.rb
app/overrides/: add_build_flag.rb  add_dashboard_table.rb  add_discovered_link.rb  remove_topbar.rb  subnet_form_with_discovery_proxy.rb
app/services/: discovery_fact_importer.rb  host_converter.rb
config/: as_deprecation_whitelist.yaml  routes.rb
config/initializers/: assets.rb  discovery_setup.rb
db/migrate/: 20141107091416_create_discovery_rules.rb  20141107091417_add_discovery_rule_to_host.rb  20141126165451_add_discovery_id_to_subnet.rb  20141223101707_create_discovery_attribute_sets.rb  20141223142759_fill_discovery_attribute_sets_for_existing_hosts.rb  20150302112545_remove_duplicate_tokens_from_hosts.rb  20150310153859_remove_discovery_attribute_sets_from_managed_hosts.rb  20150331132115_remove_old_permissions.rb  20150505111345_remove_leftover_tokens.rb  20150512150432_remove_old_discovery_reader_permissions.rb  20150714144500_review_discovery_permissions.rb  20151023144501_regenerate_red_hat_kexec.rb  20160719124942_add_missing_view_permissions.rb  20160805104605_rename_lock_template_setting.rb  20160818091421_add_permissions_from_default_roles.rb  20160925213030_change_discovery_widget_names.rb  20160927164411_define_explicit_length_for_discovery_rule_attributes.rb  20161006094714_add_constraints_on_subnets_smart_proxies.rb  20171222120314_add_constraints_on_discovery_rules_hostgroups.rb  20180412124505_add_priority_score_to_discovery_rules.rb  20180418093030_drop_edit_discovered_hosts_permission.rb  20180724144925_remove_unique_index_on_priority.rb  20190925010101_change_error_existing_setting.rb  20221102065954_fix_discovery_settings_category_to_dsl.rb  20221102075151_migrate_discovery_hostname_and_fact_column_to_array.rb
db/seeds.d/: 50_discovery_templates.rb  60_discovery_proxy_feature.rb  70_discovery_mail_notification.rb  80_discovery_ui_notification.rb  90_add_permissions_from_default_roles.rb
extra/: build_iso.sh  discover-host  discover_host  discovery_init.sh.example  discovery_setup_notes.md  disk_facts.rb  foreman_startup.rb  generate-authors-file  wait_for_network.sh
extra/discovery/: existing.json  rhel-r730.json  rhel7-vlan.json  simple-bond.json  suse-vmware.json
extra/ovirt-node-build/: Vagrantfile  build_image.sh
extra/ovirt-node-plugin-foreman/: .gitignore  Makefile.am  README.md  autogen.sh  configure.ac  ovirt-node-plugin-foreman.spec.in
extra/ovirt-node-plugin-foreman/conf/: Makefile.am  foreman-plugin.firewall.in  foreman-plugin.logs
extra/ovirt-node-plugin-foreman/recipe/: Makefile.am  foreman-plugin-iso.ks  foreman-plugin-minimizer.ks
extra/ovirt-node-plugin-foreman/src/: Makefile.am  discover-host.rb.in  discover-host.service  discovery-version-fact.rb.in  find-missing-libs
lib/: discovery.rake  discovery_home_helper_patch.rb  foreman_discovery.rake  foreman_discovery.rb  tasks.rake
lib/foreman_discovery/: engine.rb  facts.rb  proxy_api_extensions.rb  version.rb
locale/: Makefile  action_names.rb  discovery.pot  foreman_discovery.pot  zanata.xml
locale/ca/: foreman_discovery.po
locale/cs_CZ/: foreman_discovery.po
locale/de/: foreman_discovery.po
locale/en/: foreman_discovery.po
locale/en_GB/: discovery.po  foreman_discovery.po
locale/es/: discovery.po  foreman_discovery.po
locale/fr/: discovery.po  foreman_discovery.po
locale/gl/: foreman_discovery.po
locale/it/: foreman_discovery.po
locale/ja/: foreman_discovery.po
locale/ka/: foreman_discovery.po
locale/ko/: foreman_discovery.po
locale/pt_BR/: foreman_discovery.po
locale/ru/: foreman_discovery.po
locale/sv_SE/: foreman_discovery.po
locale/zh_CN/: foreman_discovery.po
locale/zh_TW/: foreman_discovery.po
test/: test_helper.rb  test_helper_discovery.rb  test_plugin_helper.rb
test/factories/: discovery_host_related.rb  discovery_rule_related.rb
test/facts/: bond0-eth0-eth1-active-passive.json  default.json  dell_npars.json  dell_vlan.json  facts_with_lldp_bond_candidate.json  only-ipv6.json  pxeless-vlan.json  rhel-dl380-1kdisks.json  skylake-ipv6.json  vmware_local.json
test/functional/: discovered_hosts_controller_test.rb  discovers_controller_test.rb  discovery_rules_controller_test.rb
test/integration/: discovered_hosts_test.rb  menu_test.rb
test/models/: setting_test.rb
test/static_fixtures/: redhat_kexec.erb
webpack/: ForemanDiscoveryRoutes.js  global_index.js  index.js
(+201 files in other folders)
